@@ -1,3 +1,8 @@
+2011-07-10  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/49562
+	* gfortran.dg/typebound_proc_23.f90: New.
+
 2011-07-09  Uros Bizjak  <ubizjak@gmail.com>
 
 	* gcc.dg/graphite/pr37485.c (dg-options): Add -floop-block
